nav bar, but not showing correctly

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,7 +52,10 @@
     margin: 0 auto;
 }
 
-
+.hello {
+  position: absolute;
+  left: 1%;
+}
 
 .navbar-toggle .icon-bar:nth-of-type(2) {
 	  top: 1px;
@@ -70,8 +73,6 @@
 
 .navbar-toggle.active .icon-bar:nth-of-type(1) {
 	  top: 6px;
-    position: absolute;
-    left: 1%;
 	  transform: rotate(45deg);
 }
 
@@ -81,7 +82,5 @@
 
 .navbar-toggle.active .icon-bar:nth-of-type(3) {
 	  top: -6px;
-    position: absolute;
-    left: 1%;
 	  transform: rotate(-45deg);
 }
